Set DTrace preprocessor via the DTRACE_CPP variable
The way DTrace generates files depend on the given preprocessor. Without
passing the CPP environment variable dtrace Python script uses the cpp
by default.

For systems where the CPP is set to something else, the generated files
won't be created the same way, so instead the DTrace preprocessor can be
overriden manually with the new DTRACE_CPP variable. For example:

./configure DTRACE_CPP="gcc -E -xc" --enable-dtrace

Fixes GH-11847

--- a/configure.ac
+++ b/configure.ac
@@ -1043,6 +1043,9 @@ if test "$PHP_IPV6" != "no" && test "$ac_cv_ipv6_support" = yes; then
 fi
 
 dnl DTRACE checks. Note: this has to be done after SAPI configuration.
+AC_ARG_VAR([DTRACE_CPP],[Override default DTrace cpp preprocessor when using the --enable-dtrace option])dnl
+AS_IF([test -z "$DTRACE_CPP"],[],[DTRACE_CPP="CPP=\"$DTRACE_CPP\""])
+
 PHP_ARG_ENABLE([dtrace],
   [whether to enable DTrace support],
   [AS_HELP_STRING([--enable-dtrace],
