--- a/.github/actions/test-libmysqlclient/action.yml
+++ b/.github/actions/test-libmysqlclient/action.yml
@@ -10,8 +10,8 @@ runs:
         set -x
         ${{ inputs.withMysqli == 'true' && 'export MYSQL_TEST_USER=root' || '' }}
         ${{ inputs.withMysqli == 'true' && 'export MYSQL_TEST_PASSWD=root' || '' }}
-        export PDO_MYSQL_TEST_DSN="mysql:host=127.0.0.1;dbname=test"
-        export PDO_MYSQL_TEST_HOST=127.0.0.1
+        export PDO_MYSQL_TEST_DSN="mysql:host=mysql;dbname=test"
+        export PDO_MYSQL_TEST_HOST=mysql
         export PDO_MYSQL_TEST_USER=root
         export PDO_MYSQL_TEST_PASS=root
         export REPORT_EXIT_STATUS=no
